<resources>
    <string name="app_name">Save a life</string>
    <string name="username">Gebruikersnaam</string>
    <string name="login">Inloggen</string>
    <string name="password">Wachtwoord</string>
    <string name="sendButton">Verstuur</string>
    <string name="register">Registreer</string>
    <string name="category">Categorie</string>
    <string name="situation">Kies een situatie</string>
    <string name="reanimationButton">Reanimatie</string>
    <string name="fireButton">Brand</string>
    <string name="evacuationButton">Evacuatie</string>
    <string name="mapButton">Map</string>
    <string name="optionsButton">Opties</string>
    <string name="yourRole">Uw rol</string>
    <string name="yourRoleIs">Uw rol is</string>
    <string name="instructions">Instructies</string>
    <string name="findable">Voeg contactinformatie toe aan "zoek een BHVer"</string>
    <string name="leader">Extra BHV curses gevolgd?</string>
    <string name="bhv">Geregistreerde BHVer</string>
    <string name="title_activity_maps">Map</string>
    <string name="bhvButton">Vind BHVer</string>
    <string name="callBas">Bas Meijer - 224 M</string>
    <string name="callDominic">Dominic Hoogkamer - 250 M</string>
    <string name="callSven">Sven van der Hoeven - 300 M</string>
</resources>
