<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marvi.devthis.bhv">

    <TextView
        android:id="@+id/Bhv"
        android:layout_width="121dp"
        android:layout_height="29dp"
        android:ems="10"
        android:text="@string/bhvButton"
        android:textSize="22sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105"
        app:layout_constraintHorizontal_bias="0.501" />

    <Button
        android:id="@+id/BasButton"
        android:layout_width="251dp"
        android:layout_height="42dp"
        android:onClick="callPersonClick"
        android:text="@string/callBas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.268" />

    <Button
        android:id="@+id/DominicButton"
        android:layout_width="251dp"
        android:layout_height="42dp"
        android:onClick="callPersonClick"
        android:text="@string/callDominic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454" />

    <Button
        android:id="@+id/SvenButton"
        android:layout_width="251dp"
        android:layout_height="42dp"
        android:onClick="callPersonClick"
        android:text="@string/callSven"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.645" />


</android.support.constraint.ConstraintLayout>
