<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marvi.devthis.Role">

    <TextView
        android:id="@+id/Category"
        android:layout_width="148dp"
        android:layout_height="29dp"
        android:ems="10"
        android:text="@string/category"
        android:gravity="center"

        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033" />

    <TextView
        android:id="@+id/yourRoleIs"
        android:layout_width="130dp"
        android:layout_height="44dp"
        android:ems="10"
        android:text="@string/yourRoleIs"
        android:textSize="19sp"
        android:textStyle="bold"
        android:gravity="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169" />

    <TextView
        android:id="@+id/yourRole"
        android:layout_width="139dp"
        android:layout_height="55dp"
        android:ems="10"
        android:text="@string/yourRole"
        android:textSize="19sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.339"
        app:layout_constraintHorizontal_bias="0.481" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="139dp"
        android:layout_height="55dp"
        android:ems="10"
        android:text="@string/instructions"
        android:textSize="19sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.581"
        app:layout_constraintHorizontal_bias="0.481" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="103dp"
        android:layout_height="107dp"
        app:srcCompat="@drawable/sound"
        android:layout_marginLeft="50dp"
        android:clickable="true"
        android:onClick="playSound"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="33dp" />

</android.support.constraint.ConstraintLayout>
